--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'fontes/Matapacos_FREE.ttf' %}">
     <title>Document</title>
@@ -126,8 +128,145 @@
             </div>
 
     </section>
-
-   <section class="sec-programas">
+    <section class="sec-programas">
+        <div class="div-h2Programas">
+            <h2 class="h2-programas">Nossos programas</h2>
+        </div>
+        <div class="carrocel">
+            <div class="slide">
+                <img src="{% static 'fotos/1.jpg' %}" alt="">
+            </div>
+           <div>
+                <div class="separador"></div>
+           </div>
+            <div class="text-slide">
+                <h2>titulo-1</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                </p>
+                
+            </div>
+            <div class="slide">
+                <img src="{% static 'fotos/2.jpg' %}" alt="">
+            </div>
+            <div>
+                <div class="separador"></div>
+            </div>
+            <div class="text-slide">
+                <h2>titulo-2</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                </p>
+            </div>
+            <div class="slide">
+                <img src="{% static 'fotos/3.jpg' %}" alt="">
+            </div>
+            <div>
+                <div class="separador"></div>
+            </div>
+            <div class="text-slide">
+                <h2>titulo-3</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                </p>
+            </div>
+            <div class="slide">
+                <img src="{% static 'fotos/4.jpg' %}" alt="">
+            </div>
+            <div>
+                <div class="separador"></div>
+            </div>
+            <div class="text-slide">
+                <h2>titulo-4</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                </p>
+            </div>
+            <div class="slide">
+                <img src="{% static 'fotos/5.jpg' %}" alt="">
+            </div>
+            <div>
+                <div class="separador"></div>
+            </div>
+            <div class="text-slide">
+                <h2>titulo-5</h2>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                    Lorem, ipsum dolor sit amet consectetur 
+                    adipisicing elit. Quasi unde possimus quae 
+                    atque sint? Non beatae ad, maiores iste similique 
+                    itaque qui, quisquam, laborum quod adipisci impedit 
+                    fugiat repudiandae corrupti!
+                </p>
+                </div>
+        </div> 
+    </section>
+    <!--<section class="sec-programas">
         <div class="div-h2Programas">
             <h2 class="h2-programas">Nossos programas</h2>
         </div>
@@ -290,7 +429,7 @@
             </div>
             
        
-    </section>
+    </section>-->
     <section class="sec-parcerias" id="sec-parcerias-id">
         <h2>Parcerias</h2>
         <div id="parcerias">
@@ -350,6 +489,8 @@
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="{% static 'js/contato.js' %}"></script>    
     <script src="{% static 'js/main.js' %}"></script>
 </body>
