--- a/templates/home.html
+++ b/templates/home.html
@@ -31,11 +31,11 @@
                 </div>
             </label>
             <ul class="ul-menu_mobile" id="ul menu_mobile-id">
-                <li><a href="#sec-inicio-id" class="a-menu">Inicio</a></li>
-                <li><a href="#sec-quem_somos-id" class="a-menu">Sobre nós</a></li>
-                <li><a href="#sec-programas-id" class="a-menu">Programas</a></li>
-                <li><a href="#sec-parcerias-id" class="a-menu">Parcerias</a></li>
-                <li><a href="#sec-contato-id" class="a-menu">Contato</a></li>
+                <li><a href="#sec-inicio-id" class="a-menu a-1">Inicio</a></li>
+                <li><a href="#sec-quem_somos-id" class="a-menu a-2">Sobre nós</a></li>
+                <li><a href="#sec-programas-id" class="a-menu a-3">Programas</a></li>
+                <li><a href="#sec-parcerias-id" class="a-menu a-4">Parcerias</a></li>
+                <li><a href="#sec-contato-id" class="a-menu a-5">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -47,6 +47,11 @@
         {% endif %}
         <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo_inicio">
     </section>
+    <div class="side-nav side-nav-inicio"></div>
+    <div class="side-nav side-nav-sobre_nos"></div>
+    <div class="side-nav side-nav-programas"></div>
+    <div class="side-nav side-nav-parcerias"></div>
+    <div class="side-nav side-nav-contatos"></div>
     <section class="sec-quem_somos" id="sec-quem_somos-id">
         <div class="div-quem_somos" id ="div-quem_somos-id">
             <h2 class="h2-quem_somos">Quem somos ?</h2>
