--- a/static/css/home.css
+++ b/static/css/home.css
@@ -48,30 +48,38 @@ p{
     src: local('#sec-programas-id');
 }
 
-/*.side-nav-inicio{
+.side-nav{
     position: fixed;
-    height: 50px;
-    width: 50px;
-    background-color: orange;
     right: 10px;
-}*/
+    top: calc(100vh/4);
+    z-index: 15;
+}
+.cel{
+    height: 30px;
+    width: 30px;
+    background-color: orange;
+    margin: 20px 0px;
+    background-size: contain;
+    background-size: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .side-nav-inicio{
-    position: fixed;
-    height: 50px;
-    width: 50px;
-    background-color: orange;
-    right: 10px;
-    top: 30%;
     background-image: url('../fotos/home.svg');
+    
 }
 .side-nav-sobre_nos{
-    position: fixed;
-    height: 50px;
-    width: 50px;
-    background-color: orange;
-    right: 10px;
-    top: 50%;
-    background-image: url('../fotos/FF_Pictograma.png');
+   background-image: url('../fotos/FF_Pictograma.png');
+   
+}
+.side-nav-programas{
+    background-image: url('../fotos/calendar.svg');
+}
+.side-nav-parcerias{
+    background-image: url('../fotos/partner.svg');
+}
+.side-nav-contatos{
+    background-image: url('../fotos/user.svg');
 }
 /*sessão inicio desktop*/
 
@@ -416,7 +424,9 @@ footer li{
         position: absolute;
         top: 30vh;
     }
-
+    .side-nav{
+        display: none;
+    }
     /*Menu hamburguer*/
 
     .input-hamburguer{
