--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 <body>
     <header class="header" id="header-id">
         <div class="logo_header" id="logo_header-id">
-          <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo">      
+          <img src="{% static 'fotos/logoBaner.svg' %}" alt="" class="img-logo">      
         </div>
         <nav class="nav-bar" id="nav-bar-id">         
             <div class="btn-pai">
@@ -46,7 +46,7 @@
         {% else %}
         <img src="{% static 'fotos/ff.jpg' %}" alt="" class="img-inicio">
         {% endif %}
-        <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo_inicio">
+        <img src="{% static 'fotos/logoVertical.svg' %}" alt="" class="img-logo_inicio">
     </section>
     <div class="side-nav">
         <a href="#sec-inicio-id"><div class="cel side-nav-inicio"></div></a>
