--- a/core/templates/home.html
+++ b/core/templates/home.html
@@ -9,12 +9,13 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <link rel="stylesheet" href="{% static 'fontes/Matapacos_FREE.ttf' %}">
+    <link rel="icon" href="{% static 'fotos/FF_Pictograma.png' %}">
     <title>Fruto de Favela</title>
 </head>
 <body>
     <header class="header" id="header-id">
         <div class="logo_header" id="logo_header-id">
-          <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo">      
+          <img src="{% static 'fotos/logoBaner.svg' %}" alt="" class="img-logo">      
         </div>
         <nav class="nav-bar" id="nav-bar-id">         
             <div class="btn-pai">
@@ -40,18 +41,20 @@
         </nav>
     </header>
     <section class="sec-inicio" id="sec-inicio-id">
-        {% if banner.imagemBanner  %}
+        {% if banner.imagemBanner %}
         <img src="{{ banner.imagemBanner.url }}" alt="" class="img-inicio">
         {% else %}
         <img src="{% static 'fotos/ff.jpg' %}" alt="" class="img-inicio">
         {% endif %}
-        <img src="{% static 'fotos/FF_Logo_Horizontal.png' %}" alt="" class="img-logo_inicio">
+        <img src="{% static 'fotos/logoVertical.svg' %}" alt="" class="img-logo_inicio">
     </section>
-    <div class="side-nav side-nav-inicio"></div>
-    <div class="side-nav side-nav-sobre_nos"></div>
-    <div class="side-nav side-nav-programas"></div>
-    <div class="side-nav side-nav-parcerias"></div>
-    <div class="side-nav side-nav-contatos"></div>
+    <div class="side-nav">
+        <a href="#sec-inicio-id"><div class="cel side-nav-inicio"></div></a>
+        <a href="#sec-quem_somos-id"><div class="cel side-nav-sobre_nos"></div></a>
+        <a href="#sec-programas-id"><div class="cel side-nav-programas"></div></a>
+        <a href="#sec-parcerias-id"><div class="cel side-nav-parcerias"></div></a>
+        <a href="#sec-contato-id"><div class="cel side-nav-contatos"></div></a>
+    </div>
     <section class="sec-quem_somos" id="sec-quem_somos-id">
         <div class="div-quem_somos" id ="div-quem_somos-id">
             <h2 class="h2-quem_somos">Quem somos ?</h2>
